[workspace]
members = [
    "crates/hyperdraw",
    "crates/hyperkdl",
    "crates/hyperkdl_derive",
    "crates/hypermath",
    "crates/hyperpaths",
    "crates/hyperprefs",
    "crates/hyperpuzzle",
    "crates/hyperpuzzle_core",
    "crates/hyperpuzzle_impl_nd_euclid",
    "crates/hyperpuzzle_log",
    "crates/hyperpuzzle_rhai",
    "crates/hyperpuzzle_view",
    "crates/hypershape",
    "crates/hyperspeedcube",
    "crates/hyperstats",
    "crates/hyperstrings",
]
resolver = "3"

[workspace.package]
authors = ["Andrew Farkas"]
documentation = "https://dev.hypercubing.xyz/internals/"
edition = "2024"
homepage = "https://ajfarkas.dev/projects/hyperspeedcube/"
repository = "https://github.com/HactarCE/Hyperspeedcube/"
rust-version = "1.86.0"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }

assigning_clones = "allow"
comparison_chain = "allow"
doc_markdown = "warn"
if_then_some_else_none = "warn"
manual_let_else = "warn"
match_like_matches_macro = "allow"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
stable_sort_primitive = "warn"
too_many_arguments = "allow"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unwrap_used = "warn"

multiple_crate_versions = { level = "allow", priority = 1 }

[profile.dev]
opt-level = 1

[workspace.dependencies]

# Crates that are part of the project
hyperdraw = { path = "crates/hyperdraw" }
hyperkdl = { path = "crates/hyperkdl" }
hyperkdl_derive = { path = "crates/hyperkdl_derive" }
hypermath = { path = "crates/hypermath" }
hyperpaths = { path = "crates/hyperpaths" }
hyperprefs = { path = "crates/hyperprefs" }
hyperpuzzle = { path = "crates/hyperpuzzle" }
hyperpuzzle_core = { path = "crates/hyperpuzzle_core" }
hyperpuzzle_impl_nd_euclid = { path = "crates/hyperpuzzle_impl_nd_euclid" }
hyperpuzzle_log = { path = "crates/hyperpuzzle_log" }
hyperpuzzle_rhai = { path = "crates/hyperpuzzle_rhai" }
hyperpuzzle_view = { path = "crates/hyperpuzzle_view" }
hypershape = { path = "crates/hypershape" }
hyperstats = { path = "crates/hyperstats" }
hyperstrings = { path = "crates/hyperstrings" }

# Data structures
ball-tree = { version = "0.5.1" }
bitflags = { version = "2.6.0" }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
disjoint = { version = "0.8.0" }
indexmap = { version = "2.7.1" }                                               # must match serde_yml
smallvec = { version = "1.13.2", features = ["union"] }
slab = { version = "0.4.9" }
tinyset = { version = "0.5.1" }

# Serialization and filesystem
comrak = { version = "0.35.0", default-features = false }
config = { version = "0.15.7", features = ["preserve_order"] }
directories = { version = "6.0.0" }
hex = { version = "0.4.3" }
image = { version = "0.25.5" }
include_dir = { version = "0.7.4" }
kdl = { version = "6.3.3" }
miette = { version = "7.5.0" }                                 # must match kdl
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
serde_yml = { version = "0.0.12" }
strum = { version = "0.26.3", features = ["derive"] }
walkdir = { version = "2.4.0" }

# String manipulation
human-sort = { version = "0.2.2" }
ident_case = { version = "1.0.1" }
regex = { version = "1.11.1" }
sublime_fuzzy = { version = "0.7.0" }
nom = { version = "8.0.0" }

# Math
approx = { version = "0.5.1" }
cgmath = { version = "0.18.0" }
float-ord = { version = "0.3.2" }
num-traits = { version = "0.2.19" }

# Logging & error handling
env_logger = { version = "0.11.5" }
eyre = { version = "0.6.12" }
log = { version = "0.4.25" }
owo-colors = { version = "4.1.0" }
thiserror = { version = "2.0.11" }
tracing = { version = "0.1.41" }
tracing-error = { version = "0.2.1" }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "env-filter",
    "fmt",
    "ansi",
    "json",
    "registry",
] }
color-eyre = { version = "0.6.2", default-features = false, features = [
    "track-caller",
    "capture-spantrace",
] } # blocked on https://github.com/eyre-rs/eyre/pull/188

# Command-line interface
clap = { version = "4.5.28" }
clio = { version = "0.3.5", features = ["clap-parse"] }

# Core windowing, graphics, and UI (versions must match; generally limited by egui_dock)
eframe = { version = "0.31.1", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wayland",
    "web_screen_reader",
    "wgpu",
    "x11",
] }
ecolor = { version = "0.31.1" }
egui = { version = "0.31.1" }
egui_dock = { version = "0.16.0" }
egui-winit = { version = "0.31.1" }
winit = { version = "0.30.8", features = [
    "serde",
] } # must match egui-winit and key-names
wgpu = { version = "24.0.1", features = ["webgl"] } # must match egui-wgpu

# Other windowing and UI
opener = { version = "0.7.0" }
rfd = { version = "0.15.1" }
key-names = { version = "3.0.0" }

# Colors
colorous = { version = "1.0.15" }
empfindung = { version = "0.2.6", default-features = false, features = ["lab"] }
oklab = { version = "1.0.1" }
lab = { version = "0.11.0" }                                                     # as required by empfindung

# Async and multithreading
parking_lot = { version = "0.12.1" }
pollster = { version = "0.4.0" }
rayon = { version = "1.7.0" }

# Lua
mlua = { version = "0.10.3", features = ["lua54", "send", "vendored"] }

# Rhai
rhai = { version = "1.21.0", features = ["sync", "no_optimize", "no_time"] }

# Hashing and PRNG
rand = { version = "0.9.0" }        # must match rand_chacha
rand_chacha = { version = "0.9.0" } # needs stable output
sha2 = { version = "0.10.8" }

# Procedural macro utilities
proc-macro2 = { version = "1.0.93" }
quote = { version = "1.0.38" }
syn = { version = "2.0.98" }

# Other dependencies
bytemuck = { version = "1.21.0", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
itertools = { version = "0.14.0" }
lazy_static = { version = "1.5.0" }
names = { version = "0.14.0", default-features = false }
thread_local = { version = "1.1.8" }
time = { version = "0.3.37", features = ["local-offset"] }
web-time = { version = "1.1.0" }


[patch.crates-io]
egui = { git = "https://github.com/HactarCE/egui.git", branch = "raw-keyboard-input-0.31.1" }
egui-winit = { git = "https://github.com/HactarCE/egui.git", branch = "raw-keyboard-input-0.31.1" }
epaint = { git = "https://github.com/HactarCE/egui.git", branch = "raw-keyboard-input-0.31.1" }
ecolor = { git = "https://github.com/HactarCE/egui.git", branch = "raw-keyboard-input-0.31.1" }

# Fork of color-eyre that does not re-export color_owo, which otherwise clogs
# editor completions. Blocked on https://github.com/eyre-rs/eyre/pull/188
color-eyre = { git = "https://github.com/FlareFlo/color-eyre.git", rev = "3bc103d5ffd7e26a71a6894579ef721e7b6c3ce1" }
