[workspace]
members = [
    "crates/hyperdraw",
    "crates/hyperkdl",
    "crates/hyperkdl_derive",
    "crates/hypermath",
    "crates/hyperpaths",
    "crates/hyperprefs",
    "crates/hyperpuzzle",
    "crates/hyperpuzzle_core",
    "crates/hyperpuzzle_impl_nd_euclid",
    "crates/hyperpuzzle_log",
    "crates/hyperpuzzle_view",
    "crates/hyperpuzzlescript",
    "crates/hypershape",
    "crates/hyperspeedcube",
    "crates/hyperstats",
    "crates/hyperstrings",
]
resolver = "3"

[workspace.package]
authors = ["Andrew Farkas"]
documentation = "https://dev.hypercubing.xyz/internals/"
edition = "2024"
rust-version = "1.88.0"
homepage = "https://ajfarkas.dev/projects/hyperspeedcube/"
repository = "https://github.com/HactarCE/Hyperspeedcube/"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }

assigning_clones = "allow"
comparison_chain = "allow"
doc_markdown = "warn"
if_then_some_else_none = "warn"
type_complexity = "allow"
manual_let_else = "warn"
match_like_matches_macro = "allow"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
stable_sort_primitive = "warn"
too_many_arguments = "allow"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unwrap_used = "warn"

multiple_crate_versions = { level = "allow", priority = 1 }

[profile.dev]
opt-level = 1

[workspace.dependencies]

# Crates that are part of the project
hyperdraw = { path = "crates/hyperdraw" }
hyperkdl = { path = "crates/hyperkdl" }
hyperkdl_derive = { path = "crates/hyperkdl_derive" }
hypermath = { path = "crates/hypermath" }
hyperpaths = { path = "crates/hyperpaths" }
hyperprefs = { path = "crates/hyperprefs" }
hyperpuzzle = { path = "crates/hyperpuzzle" }
hyperpuzzle_core = { path = "crates/hyperpuzzle_core" }
hyperpuzzle_impl_nd_euclid = { path = "crates/hyperpuzzle_impl_nd_euclid" }
hyperpuzzle_log = { path = "crates/hyperpuzzle_log" }
hyperpuzzle_view = { path = "crates/hyperpuzzle_view" }
hyperpuzzlescript = { path = "crates/hyperpuzzlescript" }
hypershape = { path = "crates/hypershape" }
hyperstats = { path = "crates/hyperstats" }
hyperstrings = { path = "crates/hyperstrings" }

# Data structures
approx_collections = { version = "3.1.0" }
ball-tree = { version = "0.5.1" }
bitflags = { version = "2.9.1" }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
disjoint = { version = "0.8.0" }
ecow = { version = "0.2.5" }
indexmap = { version = "2.10.0" }                                              # must match serde_yml
smallvec = { version = "1.15.1", features = ["union"] }
tinyset = { version = "0.5.1" }

# Serialization and filesystem
comrak = { version = "0.40.0", default-features = false }
config = { version = "0.15.13", features = ["preserve_order"] }
directories = { version = "6.0.0" }
hex = { version = "0.4.3" }
image = { version = "0.25.5" }
include_dir = { version = "0.7.4" }
kdl = { version = "6.3.3" }
miette = { version = "7.5.0" }                                  # must match kdl
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.141" }
serde_yml = { version = "0.0.12" }
strum = { version = "0.27.1", features = ["derive"] }
walkdir = { version = "2.4.0" }

# String manipulation
arcstr = { version = "1.2.0" }
ariadne = { version = "0.5.1" }
chumsky = { version = "0.10.1", features = ["pratt"] }
human-sort = { version = "0.2.2" }
ident_case = { version = "1.0.1" }
regex = { version = "1.11.1" }
sublime_fuzzy = { version = "0.7.0" }
nom = { version = "8.0.0" }

# Math
cgmath = { version = "0.18.0" }
float-ord = { version = "0.3.2" }
num-traits = { version = "0.2.19" }

# Logging & error handling
env_logger = { version = "0.11.5" }
eyre = { version = "0.6.12" }
log = { version = "0.4.25" }
owo-colors = { version = "4.2.2" }
thiserror = { version = "2.0.12" }
color-eyre = { version = "0.6.2", default-features = false, features = [
    "track-caller",
    "capture-spantrace",
] } # blocked on https://github.com/eyre-rs/eyre/pull/188

# Command-line interface
clap = { version = "4.5.41" }
clio = { version = "0.3.5", features = ["clap-parse"] }

# Core windowing, graphics, and UI (versions must match; generally limited by egui_dock)
eframe = { version = "0.32.0", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wayland",
    "web_screen_reader",
    "wgpu",
    "x11",
] }
ecolor = { version = "0.32.0" }
egui = { version = "0.32.0" }
egui_dock = { version = "0.17.0" }
egui_extras = { version = "0.32.0", features = ["svg"] }
egui-winit = { version = "0.32.0" }
winit = { version = "0.30.11", features = [
    "serde",
] } # must match egui-winit and key-names
wgpu = { version = "25.0.0", features = ["webgl"] } # must match egui-wgpu

# Other windowing and UI
opener = { version = "0.8.2" }
rfd = { version = "0.15.4" }
key-names = { version = "3.0.0" }

# Colors
color-hex = { version = "0.2.0" }
colorous = { version = "1.0.15" }
empfindung = { version = "0.2.6", default-features = false, features = ["lab"] }
oklab = { version = "1.0.1" }
lab = { version = "0.11.0" }                                                     # as required by empfindung

# Async and multithreading
parking_lot = { version = "0.12.4" }
pollster = { version = "0.4.0" }
rayon = { version = "1.7.0" }

# Hashing and PRNG
rand = { version = "0.9.2" }        # must match rand_chacha
rand_chacha = { version = "0.9.0" } # needs stable output
sha2 = { version = "0.10.8" }

# Procedural macro utilities
proc-macro2 = { version = "1.0.93" }
quote = { version = "1.0.38" }
syn = { version = "2.0.104" }

# Other dependencies
bytemuck = { version = "1.23.1", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
itertools = { version = "0.14.0" }
lazy_static = { version = "1.5.0" }                        # TODO: replace with LazyLock
names = { version = "0.14.0", default-features = false }
time = { version = "0.3.37", features = ["local-offset"] }
web-time = { version = "1.1.0" }


[patch.crates-io]
egui = { git = "https://github.com/HactarCE/egui.git", branch = "raw-keyboard-input-0.32.0" }
egui-winit = { git = "https://github.com/HactarCE/egui.git", branch = "raw-keyboard-input-0.32.0" }
epaint = { git = "https://github.com/HactarCE/egui.git", branch = "raw-keyboard-input-0.32.0" }
ecolor = { git = "https://github.com/HactarCE/egui.git", branch = "raw-keyboard-input-0.32.0" }

# Fork of color-eyre that does not re-export color_owo, which otherwise clogs
# editor completions. Blocked on https://github.com/eyre-rs/eyre/pull/188
color-eyre = { git = "https://github.com/FlareFlo/color-eyre.git", rev = "3bc103d5ffd7e26a71a6894579ef721e7b6c3ce1" }
