[workspace]
members = [
    "crates/hsc_strings",
    "crates/hypercubing_leaderboards_client",
    "crates/hyperdraw",
    "crates/hyperkdl_derive",
    "crates/hyperkdl",
    "crates/hypermath",
    "crates/hyperpaths",
    "crates/hyperprefs",
    "crates/hyperpuzzle_core",
    "crates/hyperpuzzle_impl_nd_euclid",
    "crates/hyperpuzzle_log",
    "crates/hyperpuzzle_view",
    "crates/hyperpuzzle",
    "crates/hyperpuzzlescript",
    "crates/hypershape",
    "crates/hyperspeedcube_cli_types",
    "crates/hyperspeedcube",
    "crates/hyperstats",
    "crates/hypuz_notation",
    "crates/hypuz_util",
    "crates/timecheck",
]
resolver = "3"

[workspace.package]
authors = ["Andrew Farkas"]
documentation = "https://dev.hypercubing.xyz/internals/"
edition = "2024"
rust-version = "1.92.0"
homepage = "https://ajfarkas.dev/projects/hyperspeedcube/"
repository = "https://github.com/HactarCE/Hyperspeedcube/"

[workspace.lints.rust]
missing_docs = "warn"
rust_2018_idioms = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }

assigning_clones = "allow"
comparison_chain = "allow"
doc_markdown = "warn"
if_then_some_else_none = "warn"
type_complexity = "allow"
manual_let_else = "warn"
match_like_matches_macro = "allow"
semicolon_if_nothing_returned = "warn"
semicolon_inside_block = "warn"
stable_sort_primitive = "warn"
too_many_arguments = "allow"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unwrap_used = "warn"

multiple_crate_versions = { level = "allow", priority = 1 }

[profile.dev]
opt-level = 1

[workspace.dependencies]

# Crates that are part of the project
hsc_strings = { path = "crates/hsc_strings" }
hypercubing_leaderboards_client = { path = "crates/hypercubing_leaderboards_client" }
hyperdraw = { path = "crates/hyperdraw" }
hyperkdl = { path = "crates/hyperkdl" }
hyperkdl_derive = { path = "crates/hyperkdl_derive" }
hypermath = { path = "crates/hypermath" }
hyperpaths = { path = "crates/hyperpaths" }
hyperprefs = { path = "crates/hyperprefs" }
hyperpuzzle = { path = "crates/hyperpuzzle" }
hyperpuzzle_core = { path = "crates/hyperpuzzle_core" }
hyperpuzzle_impl_nd_euclid = { path = "crates/hyperpuzzle_impl_nd_euclid" }
hyperpuzzle_log = { path = "crates/hyperpuzzle_log" }
hyperpuzzle_view = { path = "crates/hyperpuzzle_view" }
hyperpuzzlescript = { path = "crates/hyperpuzzlescript" }
hypershape = { path = "crates/hypershape" }
hyperspeedcube_cli_types = { path = "crates/hyperspeedcube_cli_types" }
hyperstats = { path = "crates/hyperstats" }
hypuz_notation = { path = "crates/hypuz_notation" }
hypuz_util = { path = "crates/hypuz_util" }
timecheck = { path = "crates/timecheck" }

# Data structures
approx_collections = { version = "4.0.0" }
ball-tree = { version = "0.5.2" }
bitflags = { version = "2.11.0" }
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
disjoint = { version = "0.8.0" }
ecow = { version = "0.2.5" }
indexmap = { version = "2.13.0" }                                              # must match serde_norway
smallvec = { version = "1.15.1", features = ["union"] }
tinyset = { version = "0.5.1" }

# Serialization and filesystem
base64 = { version = "0.22.1" }
comrak = { version = "0.50.0", default-features = false }
config = { version = "0.15.19", features = ["preserve_order"] }
directories = { version = "6.0.0" }
hex = { version = "0.4.3" }
hex-literal = { version = "1.1.0" }
image = { version = "0.25.9" }
include_dir = { version = "0.7.4" }
kdl = { version = "6.5.0" }
miette = { version = "7.5.0" }                                  # must match kdl
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.148" }
serde_norway = { version = "0.9.42" }
strum = { version = "0.28.0", features = ["derive"] }
tempfile = { version = "3.26.0" }
walkdir = { version = "2.4.0" }

# String manipulation
arcstr = { version = "1.2.0" }
ariadne = { version = "0.6.0" }
chumsky = { version = "0.12.0" }
ident_case = { version = "1.0.1" }
lean_string = { version = "0.5.1" }
nom = { version = "8.0.0" }
numeric-sort = { version = "0.1.5" }
regex = { version = "1.12.2" }
sublime_fuzzy = { version = "0.7.0" }
unindent = { version = "0.2.4" }

# Math
cgmath = { version = "0.18.0" }
float-ord = { version = "0.3.2" }
num-traits = { version = "0.2.19" }

# Logging & error handling
color-eyre = { version = "0.6.2", default-features = false, features = [
    "track-caller",
    "capture-spantrace",
] }
env_logger = { version = "0.11.5" }
eyre = { version = "0.6.12" }
log = { version = "0.4.29" }
owo-colors = { version = "4.3.0" }
pretty_assertions = { version = "1.4.1" }
thiserror = { version = "2.0.18" }

# Command-line interface
clap = { version = "4.5.60" }
clio = { version = "0.3.5", features = ["clap-parse"] }

# Core windowing, graphics, and UI (versions must match; generally limited by egui_dock)
hcegui = { git = "https://github.com/HactarCE/hcegui.git", rev = "c3144964f3c1b059ca2347825fdd063cf02d50b9" }
ecolor = { version = "0.33.3" }
eframe = { version = "0.33.3", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wayland",
    "web_screen_reader",
    "wgpu",
    "x11",
] }
egui = { version = "0.33.3" }
egui_dock = { version = "0.18.0" }
egui_extras = { version = "0.33.3", features = [
    "svg",
    "http", # for discord avatars
    "webp", # for discord avatars
] }
winit = { version = "0.30.12", features = [
    "serde",
] } # must match egui-winit and key-names
wgpu = { version = "27.0.1", features = ["webgl"] } # must match egui-wgpu

# Other windowing and UI
arboard = { version = "3" }       # should match egui
material-design-icons = "7.4.48"
opener = { version = "0.8.3" }
rfd = { version = "0.17.2" }
key-names = { version = "3.0.0" }

# Colors
colorous = { version = "1.0.15" }
empfindung = { version = "0.2.6", default-features = false, features = ["lab"] }
oklab = { version = "1.0.1" }
lab = { version = "0.11.0" }                                                     # as required by empfindung

# Async and multithreading
num_cpus = { version = "1.17.0" }
parking_lot = { version = "0.12.5" }
pollster = { version = "0.4.0" }
rayon = { version = "1.11.0" }

# Networking, cryptography, hashing, and PRNG
chacha20 = { version = "0.10.0" }                 # needs stable output
drand-verify = { version = "0.6.2" }
rand = { version = "0.10.0" }                     # must match chacha20
sha2 = { version = "0.10.9" }
tsp-http-client = { version = "0.1.0" }
ureq = { version = "3.2.0", features = ["json"] }
self_update = { version = "0.42.0" }

# Procedural macro utilities
proc-macro2 = { version = "1.0.104" }
quote = { version = "1.0.42" }
syn = { version = "2.0.117" }

# Other dependencies
bytemuck = { version = "1.24.0", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
itertools = { version = "0.14.0" }
lazy_static = { version = "1.5.0" }                        # TODO: replace with LazyLock
names = { version = "0.14.0", default-features = false }
proptest = { version = "1.9.0" }
proptest-derive = { version = "0.8.0" }
time = { version = "0.3.44", features = ["local-offset"] }
web-time = { version = "1.1.0" }

[patch.crates-io]
ecolor = { git = "https://github.com/HactarCE/egui", rev = "9e4b9fc69344ff3c43a623047fab2f0f82848bee" }
eframe = { git = "https://github.com/HactarCE/egui", rev = "9e4b9fc69344ff3c43a623047fab2f0f82848bee" }
egui = { git = "https://github.com/HactarCE/egui", rev = "9e4b9fc69344ff3c43a623047fab2f0f82848bee" }
