[package]
name = "hyperdraw"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
hypermath = { workspace = true }
hyperprefs = { workspace = true }
hyperpuzzle = { workspace = true }

bytemuck = { workspace = true }
cgmath = { workspace = true }
eyre = { workspace = true }
image = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true, features = ["serde"] }
wgpu = { workspace = true }
