[package]
name = "hyperkdl"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"

[dependencies]
kdl = { workspace = true }
miette = { workspace = true }

[lints]
workspace = true
