[package]
name = "hypermath"
description = "Multidimensional vector, matrix, and conformal geometric algebra primitives developed for Hyperspeedcube"
version = "0.1.0"
authors = ["Andrew Farkas"]
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["math", "rotor", "geometric-algebra", "conformal-geometric-algebra", "4d"]
categories = ["mathematics", "data-structures"]
license = "CC-BY-NC-SA-4.0"

[lints]
workspace = true

[dependencies]
approx = "0.5.1"
ball-tree = "0.4.0"
bitflags = "2.3.3"
bitvec = { version = "1.0.1", default-features = false, features = ["alloc"] }
bytemuck = { version = "1.13.1", optional = true }
float-ord = "0.3.2"
itertools = "0.11.0"
log = "0.4.17"
num-traits = "0.2.16"
parking_lot = "0.12.1"
serde = { version = "1.0.176", features = ["derive"], optional = true }
smallvec = { version = "1.11.0", features = ["const_new", "union"] }
tinyset = "0.4.15"

[features]
serde = ["dep:serde", "smallvec/serde"]
