[package]
name = "hyperpaths"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
directories = { workspace = true }
eyre = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
time = { workspace = true }

[lints]
workspace = true
