[package]
name = "hyperprefs"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
hypermath = { path = "../hypermath" }
hyperpuzzle = { path = "../hyperpuzzle", features = ["ecolor"] }

bitvec = { workspace = true }
colorous = { workspace = true }
config = { workspace = true }
directories = { workspace = true }
eyre = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
key-names = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_yml = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
