[package]
name = "hyperpuzzle"
description = "Multidimensional twisty puzzle generator and simulator backend for Hyperspeedcube"
version = "0.1.0"
authors = ["Andrew Farkas"]
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["cubing", "hypercubing", "rubik", "conformal-geometric-algebra", "4d"]
categories = ["algorithms", "mathematics", "simulation"]
license = "CC-BY-NC-SA-4.0"

[lints]
workspace = true

[dependencies]
color-eyre = "0.6"
eyre = "0.6"
float-ord = "0.3.2"
itertools = "0.11.0"
lazy_static = "1.4.0"
log = "0.4.17"
parking_lot = "0.12.1"
rand = "0.8.5"
mlua = { version = "0.9.7", features = ["lua54", "parking_lot"] }
serde = { version = "1.0.176", features = ["derive"] }
smallvec = { version = "1.11.0", features = ["const_new", "union"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.58"
tinyset = "0.4.15"
walkdir = "2.4.0"

hypermath = { path = "../hypermath" }
hypershape = { path = "../hypershape" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm_thread = "0.2.0"
