[package]
name = "hyperpuzzle"
description = "Multidimensional twisty puzzle generator and simulator backend for Hyperspeedcube"
version = "0.1.0"
authors = ["Andrew Farkas"]
edition.workspace = true
homepage.workspace = true
repository.workspace = true
keywords = ["cubing", "hypercubing", "rubik", "conformal-geometric-algebra", "4d"]
categories = ["algorithms", "mathematics", "simulation"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
color-eyre = "0.6"
disjoint = "0.8.0"
eyre = "0.6"
float-ord = "0.3.2"
hex = "0.4.3"
indexmap = "2.4.0"
itertools = "0.13.0"
kdl = "4.6.0"
lazy_static = "1.5.0"
log = "0.4.17"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.6.0"
mlua = { version = "0.10.0", features = ["lua54", "send", "vendored"] }
serde = { version = "1.0.176", features = ["derive"] }
smallvec = { version = "1.11.0", features = ["const_new", "union"] }
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.3"
tinyset = "0.5.1"
walkdir = "2.4.0"

hypermath = { path = "../hypermath" }
hypershape = { path = "../hypershape" }
