[package]
name = "hyperpuzzle"
description = "Multidimensional twisty puzzle generator and simulator backend for Hyperspeedcube"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["cubing", "hypercubing", "rubik", "conformal-geometric-algebra", "4d"]
categories = ["algorithms", "mathematics", "simulation"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
hypermath = { path = "../hypermath" }
hypershape = { path = "../hypershape" }

disjoint = { workspace = true }
eyre = { workspace = true }
float-ord = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
kdl = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
mlua = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tinyset = { workspace = true }
walkdir = { workspace = true }

# Color conversions
ecolor = { workspace = true, optional = true }
oklab = { workspace = true, optional = true }
