[package]
name = "hyperpuzzle_library"
description = "Puzzle library for Hyperspeedcube"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["cubing", "hypercubing", "rubik", "4d"]
categories = ["simulation"]
license = "MIT OR Apache-2.0"

[dependencies]
hyperpaths = { workspace = true }
hyperpuzzle = { workspace = true }
hyperpuzzle_log = { workspace = true }

include_dir = { workspace = true }
itertools = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }

[lints]
workspace = true
