[package]
name = "hyperpuzzle_log"
description = "Log files for Hyperspeedcube"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["cubing", "hypercubing", "rubik", "4d"]
categories = ["filesystem"]
license = "MIT OR Apache-2.0"

[dependencies]
hyperkdl = { workspace = true }
hyperkdl_derive = { workspace = true }
hyperpuzzle_core = { workspace = true }

itertools = { workspace = true }
kdl = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
smallvec = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
