[package]
name = "hyperpuzzleview"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["cubing", "hypercubing", "rubik", "conformal-geometric-algebra", "4d"]
categories = ["algorithms", "mathematics", "simulation"]
license = "GPL-3.0-or-later"

[lints]
workspace = true

[dependencies]
hyperdraw = { path = "../hyperdraw" }
hypermath = { path = "../hypermath" }
hyperprefs = { path = "../hyperprefs" }
hyperpuzzle = { path = "../hyperpuzzle" }

cgmath = { workspace = true }
float-ord = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
web-time = { workspace = true }
